Fix navbar and body overlap

--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@ main {
     width: 60%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 61px;
+    padding: 20px;
 }
 
 h2,
@@ -67,7 +69,8 @@ button:hover {
 }
 
 nav {
-    box-shadow: 0px 0px 10px gray;
+    /* box-shadow: 0px 0px 10px gray; */
+    border-bottom: 1px solid var(--gray-color);
     z-index: 100;
     position: absolute;
     top: 0;
@@ -126,7 +129,6 @@ nav {
 }
 
 #about-text {
-    padding: 5em;
     max-width: 55%;
     line-height: 1.7em;
 }
@@ -135,7 +137,7 @@ nav {
 
 
 #projects {
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 #contact {
@@ -148,6 +150,7 @@ footer {
     text-align: center;
     box-sizing: border-box;
     padding: 1em;
+    
 }
 
 /* ---------------------- END FOOTER ---------------------- */
@@ -156,7 +159,7 @@ footer {
 
 #skills {
     /* background-color: var(--gray-color); */
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 #skills-container {
@@ -198,6 +201,13 @@ footer {
     width: 200px;
     border-radius: 5px;
     background-color: var(--gray-color);
+}
+
+.project img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    border-radius: var(--border-radius);
 }
 
 .projects-container {
